# numpy2

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  LICENSE  MANIFEST.in  PYPI_DEPLOYMENT_GUIDE.md  QUICK_START.txt  README.md  README_MAHESH.md  pyproject.toml  setup.py
numpy2/: __init__.py  advanced.py  array.py  compat.py  converters.py  core.py  dtypes.py  fft.py  integrations.py  linalg.py  math_ops.py  random.py
tests/: __init__.py  test_compat.py  test_core.py
