[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "numpy2"
version = "2.0.1"
description = "Pure-Python NumPy drop-in: full NumPy API + JSON serialization, FastAPI/Flask/Django integration, zero dependencies"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Mahesh Makvana", email = "mahesh.makvana@example.com"},
]

keywords = [
    "numpy",
    "numpy2",
    "numpy drop-in",
    "pure python numpy",
    "json serialization",
    "numpy json",
    "fastapi numpy",
    "flask numpy",
    "django numpy",
    "pandas",
    "data-science",
    "ndarray",
    "linear algebra",
    "fft",
    "random",
    "numerical computing",
    "scientific computing",
    "int64 json",
    "numpy serializable",
    "rest-api",
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = []

[project.optional-dependencies]
fastapi = ["fastapi>=0.95.0", "starlette>=0.26.0"]
flask = ["Flask>=2.0.0"]
django = ["Django>=3.2"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.990",
]

[project.urls]
Homepage = "https://github.com/maheshmakvana/numpy2"
"Bug Tracker" = "https://github.com/maheshmakvana/numpy2/issues"
Documentation = "https://github.com/maheshmakvana/numpy2/wiki"
"Source Code" = "https://github.com/maheshmakvana/numpy2"

[tool.setuptools]
packages = ["numpy2"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --strict-markers"
