[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "numpy2"
version = "2.4.3"
description = "numpy2: Pure-Python NumPy drop-in replacement with zero dependencies. Fixes numpy JSON serialization errors, broadcasting confusion with named dimensions, NaN/Inf handling, thread safety, JAX-style vmapped vectorization, array caching, compression, pipelines, validation, scan operations, lazy arrays, and seamless web framework integration for FastAPI, Flask, and Django. Drop-in import: numpy2 as np"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Mahesh Makvana", email = "maheshmakwana527@gmail.com"},
]

keywords = [
    "numpy",
    "numpy2",
    "numpy drop-in",
    "numpy replacement",
    "numpy alternative",
    "pure python numpy",
    "json serialization numpy",
    "numpy json serializable",
    "numpy to json",
    "ndarray json",
    "numpy not json serializable",
    "object of type int64 is not json serializable",
    "typeerror object of type ndarray is not json serializable",
    "numpy json encoder",
    "numpy json decoder",
    "numpy nan json",
    "numpy inf json",
    "numpy float nan",
    "fastapi numpy",
    "flask numpy",
    "django numpy",
    "web api numpy",
    "numpy rest api",
    "numpy web framework",
    "numpy broadcasting",
    "named dimensions",
    "numpy named array",
    "numpy vmap",
    "numpy vectorize",
    "numpy batch operations",
    "numpy scan operation",
    "numpy cumulative state",
    "numpy lazy evaluation",
    "numpy lazy array",
    "numpy thread safety",
    "numpy free threaded python",
    "numpy thread safe array",
    "array compression",
    "numpy compress array",
    "array cache",
    "numpy cache",
    "array pipeline",
    "numpy pipeline",
    "array validation",
    "numpy validate array",
    "sliding window numpy",
    "batch processing numpy",
    "streaming array",
    "numpy chunked",
    "numpy large array",
    "numpy memory usage",
    "numpy memory efficient",
    "numpy compat layer",
    "numpy deprecated functions",
    "numpy removed api",
    "numpy trapz alternative",
    "numpy in1d alternative",
    "numpy einsum enhanced",
    "numpy explicit broadcast",
    "pandas",
    "data-science",
    "data science",
    "numerical computing",
    "scientific computing",
    "linear algebra",
    "fft",
    "random",
    "ndarray",
    "numpy profiling",
    "numpy describe",
    "type conversion numpy",
    "numpy auto type convert",
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = []

[project.optional-dependencies]
fastapi = ["fastapi>=0.95.0", "starlette>=0.26.0"]
flask = ["Flask>=2.0.0"]
django = ["Django>=3.2"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.990",
]

[project.urls]
Homepage = "https://github.com/maheshmakvana/numpy2"
"Bug Tracker" = "https://github.com/maheshmakvana/numpy2/issues"
Documentation = "https://github.com/maheshmakvana/numpy2/wiki"
"Source Code" = "https://github.com/maheshmakvana/numpy2"

[tool.setuptools]
packages = ["numpy2"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --strict-markers"
